# kindling

./: .gitmodules
.github/workflows/: kindling-ci.yaml  kindling-front-CI.yml  kindling-release.yaml  metadata-provider-ci.yml
collector/: go.mod  go.sum
collector/docker/: Dockerfile  DockerfileLocalProbe  kindling-collector-config.yml
collector/pkg/component/consumer/exporter/pyroscopeexporter/: simple_sender.go  simple_sender_test.go
collector/pkg/component/receiver/cgoreceiver/: cgo_func.h  cgoreceiver.go  config.go  profiling.go
collector/pkg/ebpf/pprof/: pprof.go  pprof_test.go
deploy/: README.md
deploy/agent/: kindling-collector-config.yml
deploy/recompile-probe/: recompile-module.sh
docs/: ebpf_cpu_profiling.md
probe/: CMakeLists.txt
probe/cmake/modules/: bcc_minimal.cmake
probe/src/: CMakeLists.txt
probe/src/cgo/: cgo_func.cpp  cgo_func.h  kindling.cpp  kindling.h
probe/src/core/symbolizer/: bcc_per_pid_symbolizer.cpp  bcc_per_pid_symbolizer.h  kindling_symbolizer.cpp  kindling_symbolizer.h
